style/style-shared.css
/* ... */
.text[data-role=result]:not(:empty) {
	margin-bottom: 0;
	margin-top: 1rem;
	max-height: 20vh;
	overflow-y: auto;
}




/**
* ========================================================
* INPUTS / FORMS
* ========================================================
*/
.input__row,
.input__group {
	align-items: flex-end;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	margin: 0;
}
.input__row {
	margin-left: -0.5rem;
	margin-top: -0.5rem;
}
.input__row + .input__row {
	margin-top: 0.5rem;
}
.input__group {
	margin-top: 0.5rem;
	max-width: 100%;
}
.input__group--right {
	margin-left: auto;
}
.input__group::before {
	content: "";
	display: inline-block;
	height: 0;
	width: 0.5rem;
}
.input__label {
	align-self: flex-start;
	display: block;
	flex: none;
	height: 3rem;
	line-height: 1;
	min-width: 0;
	overflow: visible;
	white-space: nowrap;
	width: 0;
}
.input__label + .input__textarea, .input__label + .tributable__wrapper .input__textarea {
	margin-top: 1rem;
}
.input, .input--secondary, .input__button, .input__radio, .input__select, .input__textarea, button, input, select, textarea {
	background: hsl(var(--background--bold));
	background-image:
		linear-gradient(to right, hsl(var(--interactive--secondary)) 50%, transparent 0),
		linear-gradient(rgba(255,255,255, 0.05), rgba(255,255,255, 0.05)),
		linear-gradient(rgba(255,255,255, 0.1),  rgba(255,255,255, 0.1));
	background-position: bottom right;
	background-repeat: no-repeat;
	background-size:
		300% 2px,
		100% 2px,
		0    2px;
	border: none;
	border-radius: 3px;
	box-sizing: content-box;
	color: hsl(var(--text));
	font-family: inherit;
	font-size: 1rem;
	height: 1rem;
	line-height: 1rem;
	margin: 0;
	max-width: calc(100% - 1rem);
	outline: none;
	padding: 0.5rem;
	transition: flex 0.1s ease-in-out, background-position 0.1s ease-in-out;
}
/* Fix overflow problems for iOS */
input {
	height: auto;
	line-height: 2rem;
	padding: 0 0.5rem;
}
.input:active, .input:focus, .input--secondary:active, .input--secondary:focus, .input__button:active, .input__button:focus, .input__select:active, .input__select:focus, .input__textarea:active, .input__textarea:focus, button:active, button:focus, input:active, input:focus, select:active, select:focus, textarea:active, textarea:focus {
	background-position: bottom left;
}
.input:hover, .input--secondary:active, .input--secondary:focus, .input__button:hover, .input__select:hover, .input__textarea:hover, button:hover, input:hover, select:hover, textarea:hover {
	background-size:
		300% 2px,
		0    2px,
		100% 2px;
}
.any--flex .input, .any--flex .input__button, .any--flex .input__select, .any--flex .input__textarea, .any--flex button, .any--flex input, .any--flex select, .any--flex textarea {
	max-width: 100%;
}
.input__row .input,
.input__row .input--secondary,
.input__row input {
	flex: 1;
	min-width: 100px;
}
.input__group .input,
.input__group .input--secondary,
.input__group input {
	border-radius: 0;
}
.input__group .input:first-of-type,
.input__group input:first-of-type,
.input__group .selectized {
	border-bottom-left-radius: 3px;
	border-top-left-radius: 3px;
}
.input__group .input:last-of-type,
.input__group input:last-of-type {
	border-bottom-right-radius: 3px;
	border-top-right-radius: 3px;
}
.input__group .input__radio ~ .input__radio {
	margin-left: 0.5rem;
}
.input--secondary, .input--secondary:active, .input--secondary:focus, .input--secondary:hover {
	box-shadow: inset 2rem 0 2rem -2rem rgba(0,0,0, 0.25);
}
.input--secondary:not(:focus):not(:active), .input--secondary::placeholder, .input--secondary::-webkit-input-placeholder {
	color: hsl(var(--text--secondary));
}
.input__button, button {
	background-image:
		linear-gradient(rgba(255,255,255,0.05),  rgba(255,255,255,0.05)),
		linear-gradient(rgba(255,255,255,0.1),   rgba(255,255,255,0.1)),
		linear-gradient(rgba(0,0,0, 0.25),       transparent),
		linear-gradient(to right, hsl(var(--interactive--secondary)) 50%, transparent 0);
	background-position: top, top, top, bottom right;
	background-size: 100% 2px, 0, 0, 0;
	color: hsl(var(--text));
	cursor: pointer;
	font-family: monospace, "brackets", メイリオ, Meiryo, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Osaka, "ＭＳ Ｐゴシック", "MS PGothic", serif;
	font-weight: normal;
	height: auto;
	text-transform: uppercase;
}
.input__button:hover, button:hover {
	background-size: 0, 100% 2px, 0, 0;
}
.input__button:focus, button:focus {
	background-position: top, top, top, bottom left;
	background-size: 100% 2px, 0, 0, 201% 2px;
}
.input__button:focus:not(:active):hover, button:focus:not(:active):hover {
	background-position: top, top, top, bottom left;
	background-size: 0, 100% 2px, 0, 201% 2px;
}
.input__button:active, button:active {
	background-position: top, top, top, bottom left;
	background-size: 0, 0, 100%, 0;
}
.input__choice {
	display: inline-block;
	max-width: 0;
	min-width: 0 !important;
	opacity: 0;
	overflow: hidden;
	width: 0;
}
.input__radio {
	background-image: none;
	color: hsl(var(--text--secondary));
	cursor: pointer;
	font-family: monospace, "brackets", メイリオ, Meiryo, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Osaka, "ＭＳ Ｐゴシック", "MS PGothic", serif;
	/*margin-bottom: 0.25rem;
	margin-top: 0.25rem;
	padding: 0.25rem 0.5rem;*/
	max-width: monospace;
	overflow: hidden;
	text-overflow: ellipsis;
	user-select: none;
	white-space: nowrap;
}
/*2020-04-28*/
.input__radio,
.input__checkbox {
	align-items: center;
	background-image: linear-gradient(to right, hsla(var(--background),0.3) 1.75rem, transparent 0);
	background-size: 100%;
	box-shadow: inset 0 0 0 1px hsl(var(--background--bold));
	display: flex;
}
.input__radio::before,
.input__radio > [class*="symbol"]:first-of-type::before,
.input__checkbox::before,
.input__checkbox > [class*="symbol"]:first-of-type::before {
	font-size: 1rem;
	margin-right: 1rem;
}
/* ... */

